fix(form-group): restore wrapper spacing

--- a/packages/toolkit/core/objects/_form-group.scss
+++ b/packages/toolkit/core/objects/_form-group.scss
@@ -7,7 +7,7 @@
 }
 
 .ofh-form-group--wrapper {
-  @include ofh-responsive-margin(24, 'bottom');
+  @include ofh-responsive-margin(32, 'bottom');
 }
 
 .ofh-form-group--error {
